<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.suromo.liuwan.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_discovery"
        android:name="com.suromo.liuwan.ui.discovery.DiscoveryFragment"
        android:label="@string/discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.suromo.liuwan.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.suromo.liuwan.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.suromo.liuwan.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
    </fragment>
</navigation>